--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,7 +5,10 @@ public-f net.minecraft.world.inventory.AbstractContainerMenu f_150394_
 public-f net.minecraft.world.inventory.InventoryMenu f_39698_
 public-f net.minecraft.world.inventory.InventoryMenu f_39703_
 
-public-f net.minecraft.world.entity.player.Inventory f_35974_
+public-f net.minecraft.world.entity.player.Inventory f_35974_ # items
+public-f net.minecraft.world.entity.player.Inventory f_35975_ # armor
+public-f net.minecraft.world.entity.player.Inventory f_35976_ # offhand
+public-f net.minecraft.world.entity.player.Inventory f_35979_ # compartments
 
 public-f net.minecraft.world.inventory.Slot f_40220_
 public-f net.minecraft.world.inventory.Slot f_40221_
@@ -14,3 +17,4 @@ public-f net.minecraft.world.inventory.Slot f_40221_
 public-f net.minecraft.world.inventory.CraftingContainer f_39323_
 
 public net.minecraft.client.gui.screens.inventory.CreativeModeInventoryScreen f_98505_
+
