--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ java {
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 minecraft {
     // The mappings can be changed at any time and must be in the following format.
     // Channel:   Version:
