add extended nonnulllist

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -18,3 +18,5 @@ public-f net.minecraft.world.inventory.CraftingContainer f_39323_
 
 public net.minecraft.client.gui.screens.inventory.CreativeModeInventoryScreen f_98505_
 
+public net.minecraft.world.entity.LivingEntity m_21315_()V # detectEquipmentUpdates
+
