--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'ga.melara'
-version = '1.19.2-0.0.1'
+version = '1.19.2-forge-0.0.0.1'
 
 java {
     archivesBaseName = 'stevesminipouch'
