--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -19,4 +19,5 @@ public-f net.minecraft.world.inventory.CraftingContainer f_39323_
 public net.minecraft.client.gui.screens.inventory.CreativeModeInventoryScreen f_98505_
 
 public net.minecraft.world.entity.LivingEntity m_21315_()V # detectEquipmentUpdates
+public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent m_100369_(Z)V
 
