--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,22 +1,9 @@
-public-f net.minecraft.world.inventory.AbstractContainerMenu f_38839_
-public-f net.minecraft.world.inventory.AbstractContainerMenu f_38841_
-public-f net.minecraft.world.inventory.AbstractContainerMenu f_150394_
-
-public-f net.minecraft.world.inventory.InventoryMenu f_39698_
-public-f net.minecraft.world.inventory.InventoryMenu f_39703_
+public-f net.minecraft.world.inventory.AbstractContainerMenu f_38839_ # slots
 
 public-f net.minecraft.world.entity.player.Inventory f_35974_ # items
 public-f net.minecraft.world.entity.player.Inventory f_35975_ # armor
 public-f net.minecraft.world.entity.player.Inventory f_35976_ # offhand
-public-f net.minecraft.world.entity.player.Inventory f_35979_ # compartments
 
-public-f net.minecraft.world.inventory.Slot f_40220_
-public-f net.minecraft.world.inventory.Slot f_40221_
+public-f net.minecraft.world.inventory.InventoryMenu f_39703_ # owner
 
-
-public-f net.minecraft.world.inventory.CraftingContainer f_39323_
-
-public net.minecraft.client.gui.screens.inventory.CreativeModeInventoryScreen f_98505_
-
-public net.minecraft.world.entity.LivingEntity m_21315_()V # detectEquipmentUpdates
-public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent m_100369_(Z)V
+public-f net.minecraft.world.inventory.CraftingContainer f_39323_ # menu
