--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,26 +1,23 @@
-modLoader="javafml" #mandatory
-loaderVersion="[43,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+modLoader="javafml"
+loaderVersion="[43,)"
 license="All Rights Reserved"
-issueTrackerURL="http://my.issue.tracker/" #optional
+# issueTrackerURL="http://my.issue.tracker/"
 
-[[mods]] #mandatory
-modId="stevesminipouch" #mandatory
-version="${file.jarVersion}" #mandatory
-displayName="Stevesminipouch" #mandatory
-updateJSONURL="http://myurl.me/" #optional
-displayURL="http://example.com/" #optional
-logoFile="stevesminipouch.png" #optional
-credits="Thanks for this example mod goes to Java" #optional
-authors="Love, Cheese and small house plants" #optional
-displayTest="MATCH_VERSION" # MATCH_VERSION is the default if nothing is specified (#optional)
-description='''
-test description
-'''
+[[mods]]
+modId="stevesminipouch"
+version="${file.jarVersion}"
+displayName="Steve's Mini Pouch"
+# updateJSONURL="https://www.curseforge.com/members/melara1024/projects"
+displayURL="https://www.curseforge.com/members/melara1024/projects"
+logoFile="icon.png"
+authors="Melara1024"
+# displayTest="MATCH_VERSION"
+description='''This mod allows you to increase or decrease the number of slots and switch between inventory functions.More information will be posted on the Wiki on GitHub.'''
 
-[[dependencies.stevesminipouch]] #optional
-   modId="forge" #mandatory
-   mandatory=true #mandatory
-   versionRange="[43,)" #mandatory
+[[dependencies.stevesminipouch]]
+   modId="forge"
+   mandatory=true
+   versionRange="[43,)"
    ordering="NONE"
    side="BOTH"
 
