--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,37 @@
 buildscript {
     repositories {
+        maven { url = 'https://maven.minecraftforge.net' }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 
+
 plugins {
+    id 'eclipse'
+    id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
 
 apply plugin: 'org.spongepowered.mixin'
 
+
+
+version = '1.18.2-forge-1.0.0.2'
 group = 'ga.melara'
-version = '1.19.2-forge-1.0.0.2'
+archivesBaseName = 'stevesminipouch'
 
-java {
-    archivesBaseName = 'stevesminipouch'
-    toolchain.languageVersion = JavaLanguageVersion.of(17)
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
-
+println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-    mappings channel: 'parchment', version: '2022.08.14-1.19.2'
+
+    mappings channel: 'parchment', version: '2022.08.07-1.18.2'
 
     runs {
         client {
@@ -61,11 +65,8 @@ minecraft {
 
         gameTestServer {
             workingDirectory project.file('run')
-
             property 'forge.logging.markers', 'REGISTRIES'
-
             property 'forge.logging.console.level', 'debug'
-
             property 'forge.enabledGameTestNamespaces', 'stevesminipouch'
 
             mods {
@@ -93,7 +94,6 @@ minecraft {
     }
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-
 }
 
 mixin {
@@ -104,29 +104,48 @@ mixin {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
+
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.1.28'
+
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.0'
+
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
 }
 
-// Example for how to get properties into the manifest for reading at runtime.
+
 jar {
     manifest {
         attributes([
                 "Specification-Title"     : "stevesminipouch",
-                //"Specification-Vendor": "stevesminipouch authors",
+                "Specification-Vendor"    : "examplemodsareus",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                //"Implementation-Vendor": "stevesminipouch authors",
+                "Implementation-Vendor"   : "examplemodsareus",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
+
 jar.finalizedBy('reobfJar')
+
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
+    repositories {
+        maven {
+            url "file://${project.projectDir}/mcmodsrepo"
+        }
+    }
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
