--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,28 +1,27 @@
 modLoader="javafml"
-loaderVersion="[43,)"
+loaderVersion="[40,)"
 license="GNU GPL v3"
-# issueTrackerURL="http://my.issue.tracker/"
 
 [[mods]]
 modId="stevesminipouch"
 version="${file.jarVersion}"
 displayName="Steve's Mini Pouch"
-displayURL="https://www.curseforge.com/members/melara1024/projects"
-displayTest="MATCH_VERSION"
 logoFile="icon.png"
 authors="Melara1024"
-description='''This mod allows you to increase or decrease the number of slots and switch between inventory functions.More information will be posted on the Wiki on GitHub.'''
+description='''
+This mod allows you to increase or decrease the number of slots and switch between inventory functions.More information will be posted on the Wiki on GitHub.
+'''
 
 [[dependencies.stevesminipouch]]
-   modId="forge"
-   mandatory=true
-   versionRange="[43,)"
-   ordering="NONE"
-   side="BOTH"
+    modId="forge"
+    mandatory=true
+    versionRange="[40,)"
+    ordering="NONE"
+    side="BOTH"
 
-[[dependencies.stevesminipouch]]
-   modId="minecraft"
-   mandatory=true
-   versionRange="[1.19.2,1.20)"
-   ordering="NONE"
-   side="BOTH"
+[[dependencies.examplemod]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="[1.18.2,1.19)"
+    ordering="NONE"
+    side="BOTH"
