--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,9 +1,9 @@
-public-f net.minecraft.world.inventory.AbstractContainerMenu f_38839_ # slots
+public-f net.minecraft.inventory.container.Container field_75151_b # slots
 
-public-f net.minecraft.world.entity.player.Inventory f_35974_ # items
-public-f net.minecraft.world.entity.player.Inventory f_35975_ # armor
-public-f net.minecraft.world.entity.player.Inventory f_35976_ # offhand
+public-f net.minecraft.entity.player.PlayerInventory field_70462_a # items
+public-f net.minecraft.entity.player.PlayerInventory field_70460_b # armor
+public-f net.minecraft.entity.player.PlayerInventory field_184439_c # offhand
 
-public-f net.minecraft.world.inventory.InventoryMenu f_39703_ # owner
+public-f net.minecraft.inventory.container.PlayerContainer field_82862_h # owner
 
-public-f net.minecraft.world.inventory.CraftingContainer f_39323_ # menu
+public-f net.minecraft.inventory.CraftingInventory field_70465_c #menu
