--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'org.spongepowered.mixin'
 
 group = 'ga.melara'
-version = '1.19.2-forge-1.0.2.1'
+version = '1.19.2-forge-1.0.2.2'
 
 java {
     archivesBaseName = 'stevesminipouch'
@@ -122,8 +122,8 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.19.2-43.1.28'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0:api")
-
+    implementation "top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0"
+    implementation "top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0:api"
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
