--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ mixin {
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
+sourceSets.main.resources { srcDir 'src/generated/resources/simple' }
 
 repositories {
     maven {
