--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,10 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+#Versions
+minecraft_version=1.19
+minecraft_sub_version=1.19.4
+
+forge_version=45.0.20
+
+curios_version=5.1.4.2
